# qt

Tanks/inc/: boardtypesregisterer.h  roomcontroller.h
Tanks/resources/: Bullet.qml  CMakeLists.txt  Tank.qml  main.qml
Tanks/src/: bulletcontroller.cpp  main.cpp  tankcontroller.cpp
Tanks_old/: CMakeLists.txt
Tanks_old/inc/: bulletcontroller.h  commondef.h  tankcontroller.h
Tanks_old/resources/: Bullet.qml  Tank.qml
Tanks_old/src/: boardtypesregisterer.cpp  bulletcontroller.cpp  main.cpp  roomcontroller.cpp  tankcontroller.cpp
tanks/: .gitignore  CMakeLists.txt
tanks/app/: CMakeLists.txt
tanks/app/src/: main.cpp
tanks/cmake/: compiler_options.cmake  project_directories.cmake  qt_config.cmake  rpath_config.cmake
tanks/common/: CMakeLists.txt
tanks/common/inc/: position.h  utils.h  vector2d.h
tanks/common/src/: position.cpp  position.h  utils.h
tanks/common/ut/: testposition.cpp
tanks/game/: CMakeLists.txt
tanks/game/inc/: bullet.h  eheading.h  score.h  tank.h  vehicle.h
tanks/game/src/: bullet.cpp  score.cpp  tank.cpp  vehicle.cpp
tanks/gameController/: CMakeLists.txt
tanks/gameControllerImpl/: CMakeLists.txt
tanks/pathsRegistry/: CMakeLists.txt
tanks/pathsRegistry/inc/: pathsregistry.h
tanks/pathsRegistry/src/: pathsregistry.cpp
tanks/qml/: CMakeLists.txt  main.qml
tanks/tests/: CMakeLists.txt  run_all_tests.py
tanks/tests/testcommon/: CMakeLists.txt  testposition.cpp  testvector2d.cpp
tanks/tests/testgame/: CMakeLists.txt  testbullet.cpp  testscore.cpp  testtank.cpp
